[tool.poetry]
name = "waypoint"
version = "0.1.0"
description = ""
authors = ["Redd <danielonodje@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.66.0"
requests = "^2.25.1"
pydantic = "^1.8.2"
SQLAlchemy = "~1.3.20"
databases = "^0.4.3"
aiosqlite = "^0.17.0"
pytest-asyncio = "^0.15.1"
mypy = "^0.910"
uvicorn = "^0.14.0"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
